<resources>
    <string name="app_name">Labels Printing</string>

    <string name="please_wait">Please wait … Process Data</string>
    <string name="import_excel">Import Barcode Excel</string>


    <string name="show_profile">Show profile</string>
    <string name="dashboard">Dashboard</string>

    <string name="user_name">User Name</string>
    <string name="enter_your_pass">Password</string>
    <string name="enter_company_code">Company Code</string>
    <string name="login">Login</string>

    <string name="import_excel_error">If a new Label Printing file is called, the previous inventory file will be deleted</string>
    <string name="import_inventory_file">Import Label Printing file</string>
    <string name="export_excel">Export Excel</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_logout">Do you want to Logout?</string>
    <string name="do_you_want_to_reset">Do you want to Reset Database?</string>
    <string name="logout">Logout</string>
    <string name="stay_logged_in">stay logged in</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="up_file">Up Directory</string>
    <string name="process_excel_sheet">Process Excel Sheet</string>
    <string name="save">Save</string>
    <string name="reset_database">Reset Database</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="required">required</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_company_code">Please enter company code</string>
    <string name="warning">Warning</string>
    <string name="proceed">Proceed</string>
    <string name="old_app_version">you are using an old version of Sales-tc, update is required</string>
    <string name="company_url_not_found" translatable="false">Company Url Not Found</string>
    <string name="version">Version %s </string>
    <string name="remaining_time">Remaining Time :</string>
    <string name="session_is_finished">Your work day is over, login is required…</string>
    <string name="network_connection_failed">Failed to connect to server.. \nplease try again</string>

    <string name="reset_password">Reset Password</string>
    <string name="please_enter_password_length_greater_than_6">Please enter a password with minimum length of 6 characters</string>
    <string name="password_not_match">Passwords not matched</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="password_changed_msg">Password has been updated successfully!</string>
    <string name="enter_old_password" translatable="false">Enter old password</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_new_password" translatable="false">Enter new password</string>
    <string name="password_should_be_matched" translatable="false"><![CDATA[New Password & Confirm Password not matched]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="dialog_title_connected_devlist">Connected Device List</string>
    <string name="pls_connect_printer_first">Please connect printer first.</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="main_pls_choose_device">Please choose a device</string>
    <string name="dialog_tip">Tip</string>
    <string name="dialog_back">Back</string>
    <string name="tip_upload_image">No Barcode Generated,please retry again</string>
    <string name="connected_list_of_printers">Connected list of printers</string>
    <string name="connect_to_printer">Connect to printer</string>

    <string name="choose_bluetooth_device">Choose Bluetooth Device</string>
    <string name="paired_devices">Paired</string>
    <string name="tip_have_no_paired_device">No paired device</string>
    <string name="tip_have_no_found_bluetooth_device">No Device</string>
    <string name="search_device">Search</string>
    <string name="please_select_printer">Please select a device of type Printer…</string>
    <string name="could_not_pair">Couldn\'t Pair With This Device…</string>
    <string name="added_device_successfully">Device Added Successfully…</string>
    <string name="printer_gps_permission">You have to approve to use GPS to discover bluetooth devices</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="device_name">Device Name</string>
    <string name="str_bluetooth_on" translatable="false">Bluetooth On</string>
    <string name="str_tv_paired_devices_lbl">Paired Devices</string>
    <string name="str_tv_available_devices_lbl">Available Devices</string>
    <string name="str_blt_pairing_lbl">Pairing …</string>
    <string name="must_give_permission_to_continue">Must give permissions to continue</string>
    <string name="_main_connected">-connect success</string>
    <string name="_main_connected_fail">connect fail</string>
    <string name="_main_disconnect">disconnected</string>
    <string name="show_conncected_devices">Show Conncected Devices</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="please_connect">Click to connect a device</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="config_print_title">إعدادت الطباعة</string>
    <string name="p_name">اسم الطباعة الحالية : %s</string>
    <string name="p_date">تاريخ اتصال الطباعة الحالية : %s</string>
    <string name="p_mm">ملي</string>
    <string name="p_cm">سنتي</string>
    <string name="p_height">الطول</string>
    <string name="p_width">العرض</string>
    <string name="p_vertical">رأسي</string>
    <string name="p_horizontal">أفقي</string>
    <string name="p_shape_settings">إعداد الشكل</string>
    <string name="p_measuring_settings">إعداد المقاس</string>
    <string name="p_choose_print">اختيار الطباعة</string>
    <string name="p_barcode_settings">إعداد نوع الباركود</string>
    <string name="p_choose_barcode">اختار نوع الباركود</string>
    <string name="p_count_of_print">عدد مرات الطباعة</string>
    <string name="p_save_settings_print">حفظ إعدادت الطباعة</string>
    <string name="print">Print</string>
    <string name="p_in">In</string>

</resources>