<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

    <item
        android:id="@+id/labelsPrintingFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/app_name" />

    <item
        android:id="@+id/connectPrinter"
        android:icon="@drawable/ic_printer"
        android:title="@string/connect_to_printer" />

    <item
        android:id="@+id/changePassword"
        android:icon="@drawable/ic_baseline_password_24"
        android:title="@string/reset_password" />

    <item
        android:id="@+id/reset"
        android:icon="@drawable/ic_restore"
        android:title="@string/reset_database" />

</menu>
