<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="16dp"
        android:text="@string/choose_bluetooth_device"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/paired_devices"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btn_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hide_↑↑↑"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View style="@style/BaseLine" />

    <ListView
        android:id="@+id/lv_dialog_choose_bluetooth_device_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:divider="@color/stroke_gray_color"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/tv_dialog_choose_bluetooth_device_paired_devices_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/tip_have_no_paired_device"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone" />

    <View style="@style/BaseLine" />

    <View
        style="@style/BaseLine"
        android:layout_marginTop="2dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_choose_bluetooth_device_search_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="16dp"
            android:text="@string/search_device"
            android:textSize="@dimen/_10ssp" />

        <ProgressBar
            android:id="@+id/pb_dialog_choose_bluetooth_device_progress_bar"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            android:visibility="gone" />

    </FrameLayout>

    <View style="@style/BaseLine" />

    <ListView
        android:id="@+id/lv_dialog_choose_bluetooth_device_found_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/stroke_gray_color"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/tv_dialog_choose_bluetooth_device_found_devices_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/tip_have_no_found_bluetooth_device"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone" />


</LinearLayout>