<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_24sdp"
      android:layout_marginEnd="@dimen/_24sdp"
      android:background="@drawable/round_rectangle"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="@dimen/_8sdp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/reset_password"
        android:textColor="@color/textFont2"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Template.TextInputLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:hint="@string/old_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTintMode="@color/textFont2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/old_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="start|center_vertical"
          android:inputType="textPassword"
          android:textColor="@color/textFont2" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Template.TextInputLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:hint="@string/new_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTintMode="@color/textFont2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/new_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="start|center_vertical"
          android:inputType="textPassword"
          android:textColor="@color/textFont2" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Template.TextInputLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        app:passwordToggleEnabled="true"
        app:passwordToggleTintMode="@color/textFont2"
        android:hint="@string/confirm_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/confirm_new_pass"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="start|center_vertical"
          android:inputType="textPassword"
          android:textColor="@color/textFont2" />
      </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
          android:id="@+id/change_pass_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/change"
          android:layout_marginHorizontal="@dimen/_8sdp"
          android:paddingHorizontal="@dimen/_16sdp"/>

        <Button
          android:id="@+id/cancel_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cancel"
          android:layout_marginHorizontal="@dimen/_8sdp"
          android:paddingHorizontal="@dimen/_16sdp"/>

        <ProgressBar
          android:id="@+id/pb_login"
          android:layout_width="@dimen/_20sdp"
          android:layout_height="@dimen/_20sdp"
          android:layout_gravity="center"
          android:indeterminate="true"
          android:indeterminateBehavior="repeat"
          android:indeterminateTint="@color/textFont2"
          tools:visibility="visible"
          android:visibility="gone" />
      </LinearLayout>

      <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="Version 1.0"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="@color/TemplateRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>