<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingTop="@dimen/_40sdp"
    tools:background="@color/purple_500">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/employee_image_nav_header"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:src="@drawable/ic_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/employee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/view_profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_profile"
                android:visibility="gone"
                android:textColor="@color/teal_200"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:text="@string/remaining_time"
            />

        <TextView
            android:id="@+id/remain_time"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_profile"
            android:textColor="@color/teal_200"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/shuttle_gray" />
</androidx.appcompat.widget.LinearLayoutCompat>
