<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.alignTech.labelsPrinting.ui.oneSingleActivity.screns.firstView.auth.view.AuthFragment" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        app:layoutDescription="@xml/fragment_auth_xml"
        tools:context=".ui.oneSingleView.firstView.auth.view.AuthFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_logo" />

            <TextView
                style="@style/textMediumStyle"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:contentPadding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email_container"
                    style="@style/loginTextInputLayout"
                    android:hint="@string/user_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:imeOptions="actionNext"
                        android:textColor="@color/purple_500"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_company_code_container"
                    style="@style/loginTextInputLayout"
                    android:hint="@string/enter_company_code"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTintMode="@color/purple_500">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/company_code_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/purple_500"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_container"
                    style="@style/loginTextInputLayout"
                    android:hint="@string/enter_your_pass"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTintMode="@color/purple_500">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/purple_500"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:textColor="@color/TemplateRed"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="Version 1.0" />

                <ProgressBar
                    android:id="@+id/pb_login"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateBehavior="repeat"
                    android:indeterminateTint="@color/textFont2"
                    android:visibility="gone" />




            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:paddingHorizontal="@dimen/_60sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/login"
            android:textAppearance="@style/FontBold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_5sdp"
            android:onClick="@{() -> fragment.login()}"
            app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat2"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvVersion"
            style="@style/textRegularStyle"
            android:text="Version 1.0"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/materialButton"
            app:layout_constraintStart_toStartOf="@+id/materialButton"
            app:layout_constraintTop_toBottomOf="@+id/materialButton" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>